--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^3.0.1",
-    "astro": "^2.0.17",
+    "@astrojs/tailwind": "^4.0.0",
+    "astro": "^2.10.7",
     "astro-compressor": "^0.4.0",
-    "astro-icon": "^0.8.0",
-    "tailwindcss": "^3.2.7"
+    "astro-icon": "0.8.1",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
-    "prettier-plugin-astro": "^0.8.0"
+    "prettier-plugin-astro": "^0.11.0"
   }
 }
