--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
+    "prettier": "^3.0.2",
     "prettier-plugin-astro": "^0.11.0"
   }
 }
