--- a/.prettierrc
+++ b/.prettierrc
@@ -6,6 +6,6 @@
 	"printWidth": 80,
 	"htmlWhitespaceSensitivity": "css",
 	"vueIndentScriptAndStyle": true,
-	"plugins": ["prettier-plugin-tailwindcss"],
+	"plugins": ["prettier-plugin-astro", "prettier-plugin-tailwindcss"],
 	"endOfLine": "lf"
 }
