--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@astrojs/tailwind": "^5.1.0",
 		"astro": "^4.0.8",
 		"astro-compressor": "^0.4.1",
+		"flowbite": "^2.2.1",
 		"tailwindcss": "^3.4.0"
 	},
 	"devDependencies": {
