--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,7 @@
 {
-  "extends": "astro/tsconfigs/base"
+	"extends": "astro/tsconfigs/base",
+	"baseUrl": "./src",
+	"paths": {
+		"@icons/*": ["components/icons/*"]
+	}
 }
