🦄 refactor: create Path aliases in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,12 @@
 {
 	"extends": "astro/tsconfigs/base",
-	"baseUrl": "./src",
-	"paths": {
-		"@icons/*": ["components/icons/*"]
+	"compilerOptions": {
+		"baseUrl": "./src",
+		"paths": {
+			"@components/*": ["./components/*"],
+			"@icons/*": ["./components/icons/*"],
+			"@pages/*": ["./pages/*"],
+			"@shared/*": ["./components/shared/*"]
+		}
 	}
 }
