--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"tailwindcss": "^3.4.3"
 	},
 	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.12",
 		"prettier": "^3.2.5",
 		"prettier-plugin-astro": "^0.13.0",
 		"prettier-plugin-tailwindcss": "^0.5.13"
