--- a/package.json
+++ b/package.json
@@ -23,5 +23,11 @@
 		"prettier-plugin-astro": "^0.13.0",
 		"prettier-plugin-tailwindcss": "^0.5.13",
 		"typescript": "5.0.3"
+	},
+	"pnpm": {
+		"ignoredBuiltDependencies": [
+			"esbuild",
+			"sharp"
+		]
 	}
 }
