--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"astro": "^4.15.8",
 		"astro-compressor": "^0.4.1",
 		"flowbite": "^2.2.1",
+		"remark-mdx-images": "^3.0.0",
 		"tailwindcss": "^3.4.3"
 	},
 	"devDependencies": {
